fixed contact detail spacing

--- a/pamohherbs-redesign/css/style.css
+++ b/pamohherbs-redesign/css/style.css
@@ -451,8 +451,6 @@ textarea {
 }
 .inline {
   display: flex;
-  flex-direction: row;
-  align-items: center;
 }
 
 /*+++++++++++++++++++ ABOUT US +++++++++++++++++++ */
